--- a/Scheduller.csproj
+++ b/Scheduller.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Logic\ITransform.cs" />
     <Compile Include="Logic\MovMergingTransform.cs" />
     <Compile Include="Logic\MovReabsorptionTransform.cs" />
+    <Compile Include="Logic\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
